<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.preconoposto.ui.viewmodels.SignupViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey_background"
        android:fillViewport="true"
        tools:context=".ui.SignupFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/signupAvatarImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_24dp"
                android:src="@drawable/ic_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/signupChoseAvatarText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:gravity="center"
                android:text="@string/escolher_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupAvatarImage" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signupChoseAvatarText" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/space_24dp"
                android:hint="@string/nome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupChoseAvatarText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupSurnameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_vertical"
                android:hint="@string/sobrenome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupNameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupSurnameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupBirthDateLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_vertical"
                android:hint="@string/data_de_nascimento"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupSurnameLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupBirthDateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="date"
                    android:maxLength="10"
                    android:onTextChanged="@{(text, start, before, count) -> viewModel.onAgeChange(text)}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/signupContactTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/space_40dp"
                android:text="@string/contato"
                android:textColor="@color/black"
                android:textSize="@dimen/signup_contact_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupBirthDateLayout" />

            <TextView
                android:id="@+id/signupPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/space_40dp"
                android:text="@string/mais_senha"
                android:textColor="@color/orange_dark"
                android:textSize="@dimen/signup_contact_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupBirthDateLayout" />

            <TextView
                android:id="@+id/signupEmailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_16dp"
                android:layout_marginTop="@dimen/space_40dp"
                android:text="@string/mais_email"
                android:textColor="@color/orange_dark"
                android:textSize="@dimen/signup_contact_text_size"
                app:layout_constraintEnd_toStartOf="@+id/signupPasswordTextView"
                app:layout_constraintTop_toBottomOf="@+id/signupBirthDateLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupEmailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_vertical"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupContactTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signupPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginTop="@dimen/margin_vertical"
                android:hint="@string/senha"
                app:layout_constraintBottom_toTopOf="@+id/signupConfirmButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupEmailLayout"
                app:layout_constraintVertical_chainStyle="spread_inside"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signupPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signupConfirmButton"
                style="@style/DarkOrangeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal"
                android:layout_marginVertical="@dimen/margin_bottom"
                android:clickable="true"
                android:enabled="true"
                android:text="@string/concluir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupPasswordLayout" />

            <TextView
                android:id="@+id/testeErro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sign_up_error"
                android:textSize="36sp"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
