<resources>
    <string name="app_name">PrecoNoPosto</string>
    <string name="concluir">Concluir</string>
    <string name="escolher_avatar">Escolher avatar</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="contato">Contato</string>
    <string name="mais_email">+ Email</string>
    <string name="mais_senha">+ Senha</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login_topBar">Entrar</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="remember_me">Lembrar de mim</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="or_connect_with">Ou conecte-se usando</string>
    <string name="doesnt_have_an_account">Não possui uma conta?</string>
    <string name="sign_in">Cadastre-se</string>
    <string name="generalScore">Nota Geral:</string>
    <string name="attendanceScore">Qualidade de atendimento:</string>
    <string name="qualityScore">Qualidade do combustível:</string>
    <string name="waitingTimeScore">Tempo de espera:</string>
    <string name="serviceScore">Qualidade dos serviços:</string>
    <string name="safetyScore">Segurança:</string>
    <string name="gasoline">Gasolina</string>
    <string name="alcohol">Alcool</string>
    <string name="diesel">Diesel</string>
    <string name="updatedAt">Atualizado:</string>
    <string name="update">ATUALIZAR</string>
    <string name="evaluate">AVALIAR</string>
    <string name="attendanceScoreCommentary">Atendimento:</string>
    <string name="qualityScoreCommentary">Combustível:</string>
    <string name="waitingTimeScoreCommentary">Espera:</string>
    <string name="serviceScoreCommentary">Serviço:</string>
    <string name="inicio">Inicio</string>
    <string name="gas_stations">Postos</string>
    <string name="profile">Perfil</string>
    <string name="chose_locale">Selecione a localização</string>
    <string name="evaluateTitle">Avalie o Posto</string>
    <string name="commentary">Comentário</string>
    <string name="network_error">Erro de conexão.\nTente novamente</string>
    <string name="try_again">Tentar novamente</string>
    <string name="sign_up_error">Erro: Todos os campos são obrigatórios</string>
    <string name="signup_required_field">Campo obrigatório</string>
    <string name="signup_required_field_error_title">Erro - Campo vazio</string>
    <string name="signup_required_field_error_description">Cadastro não realizado. Preencha todos os campos para realizar o cadastro</string>
    <string name="menor_de_idade">Para concluir o cadastro, é exigido que o usuário tenha, no mínimo, 18 anos de idade</string>
    <string name="inserir_campo_data_de_nascimento">Inserir data de nascimento no formato dia/mes/ano</string>
    <string name="data_de_nascimento_invalida">Data de nascimento inválida</string>

</resources>